lib/src/compiler/tests/testdata/errors/1.out
error[E110]: duplicate rule `test`
 --> line:1:6
  |
1 | rule test {
  |      ---- note: `test` declared here for the first time
2 |    condition: true
3 | }
4 | 
5 | rule test {
  |      ^^^^ duplicate declaration of `test`
  |